--- a/locales/birch-artifact-grid-item-preview_en.json
+++ b/locales/birch-artifact-grid-item-preview_en.json
@@ -1,8 +1,7 @@
 {
-  "failure":"Upload failed.",
-  "retry":"Retry.",
+  "failure":"Upload Failed",
   "restricted":"Restricted",
-  "duplicate":"This file was previously uploaded.",
-  "size":"The file size exceeds 15MB.",
+  "duplicate":"File Previously Uploaded",
+  "size":"File Over 15MB",
   "unsupported":"Unsupported File Type"
 }
