--- a/locales/birch-artifact-grid-item-preview_eo.json
+++ b/locales/birch-artifact-grid-item-preview_eo.json
@@ -1,8 +1,7 @@
 {
-  "duplicate": "[Ţĥîš ƒîļé ŵåš þŕéṽîöûšļý ûþļöåðéð.------------- П國カ내]",
-  "failure": "[Ûþļöåð ƒåîļéð.------- П國カ내]",
+  "duplicate": "[Ƒîļé Þŕéṽîöûšļý Ûþļöåðéð------------ П國カ내]",
+  "failure": "[Ûþļöåð Ƒåîļéð------ П國カ내]",
   "restricted": "[Ŕéšţŕîçţéð------------- П國カ내]",
-  "retry": "[Ŕéţŕý.----- П國カ내]",
-  "size": "[Ţĥé ƒîļé šîžé éẋçééðš 15ṀƁ.-------------- П國カ내]",
+  "size": "[Ƒîļé Öṽéŕ 15ṀƁ------- П國カ내]",
   "unsupported": "[Ûñšûþþöŕţéð Ƒîļé Ţýþé--------- П國カ내]"
 }
