Lingoport Automated Import

--- a/locales/birch-artifact-grid-item_it.json
+++ b/locales/birch-artifact-grid-item_it.json
@@ -1,5 +1,7 @@
 {
+  "_LRM_PKTAG350": "birch-artifact-grid-item_1_151 - CHANGES-ONLY",
   "add_title": "Aggiungi titolo",
+  "contributed_by": "Da: {0}",
   "not_tagged": "Questo ricordo non è taggato.",
   "restricted": "Accesso limitato"
 }
