Lingoport Automated Import

--- a/locales/birch-artifact-grid-item_ja.json
+++ b/locales/birch-artifact-grid-item_ja.json
@@ -1,5 +1,7 @@
 {
+  "_LRM_PKTAG431": "birch-artifact-grid-item_1_152 - CHANGES-ONLY",
   "add_title": "タイトルを追加する",
+  "contributed_by": "提供者：{0}",
   "not_tagged": "この思い出はタグ付けされていません。",
   "restricted": "制限付き"
 }
