--- a/locales/birch-artifact-grid-item_pt.json
+++ b/locales/birch-artifact-grid-item_pt.json
@@ -1,5 +1,7 @@
 {
+  "_LRM_PKTAG887": "birch-artifact-grid-item_1_154 - CHANGES-ONLY",
   "add_title": "Acrescentar um Título",
+  "contributed_by": "Por: {0}",
   "not_tagged": "Esta recordação não está marcada.",
   "restricted": "Material Restrito"
 }
