Lingoport Automated Import

--- a/locales/birch-artifact-grid-item_ko.json
+++ b/locales/birch-artifact-grid-item_ko.json
@@ -1,5 +1,7 @@
 {
+  "_LRM_PKTAG825": "birch-artifact-grid-item_1_153 - CHANGES-ONLY",
   "add_title": "제목 추가",
+  "contributed_by": "작성자: {0}",
   "not_tagged": "이 추억은 태그되어 있지 않습니다.",
   "restricted": "제한됨"
 }
