--- a/locales/birch-artifact-grid-item_ru.json
+++ b/locales/birch-artifact-grid-item_ru.json
@@ -1,5 +1,7 @@
 {
+  "_LRM_PKTAG135": "birch-artifact-grid-item_1_155 - CHANGES-ONLY",
   "add_title": "Добавить заголовок",
+  "contributed_by": "Предоставлено: {0}",
   "not_tagged": "Для этого воспоминания нет меток.",
   "restricted": "Просмотр ограничен"
 }
