Lingoport Automated Import

--- a/locales/birch-artifact-grid-item_es.json
+++ b/locales/birch-artifact-grid-item_es.json
@@ -1,5 +1,7 @@
 {
+  "_LRM_PKTAG289": "birch-artifact-grid-item_1_149 - CHANGES-ONLY",
   "add_title": "Agregar título",
+  "contributed_by": "Por: {0}",
   "not_tagged": "Este recuerdo no está etiquetado",
   "restricted": "Restringido"
 }
