Lingoport Automated Import

--- a/locales/birch-artifact-grid-item_fr.json
+++ b/locales/birch-artifact-grid-item_fr.json
@@ -1,5 +1,7 @@
 {
+  "_LRM_PKTAG3": "birch-artifact-grid-item_1_150 - CHANGES-ONLY",
   "add_title": "Ajouter le titre",
+  "contributed_by": "Par : {0}",
   "not_tagged": "Ce souvenir n’a pas de signet.",
   "restricted": "Accès restreint"
 }
