--- a/locales/birch-artifact-grid-item_zh.json
+++ b/locales/birch-artifact-grid-item_zh.json
@@ -1,5 +1,7 @@
 {
+  "_LRM_PKTAG197": "birch-artifact-grid-item_1_156 - CHANGES-ONLY",
   "add_title": "加入標題",
+  "contributed_by": "建立者：{0}",
   "not_tagged": "此回憶未加上標籤。",
   "restricted": "受限"
 }
