Lingoport Automated Import

--- a/locales/birch-artifact-grid-item_de.json
+++ b/locales/birch-artifact-grid-item_de.json
@@ -1,5 +1,7 @@
 {
+  "_LRM_PKTAG204": "birch-artifact-grid-item_1_157 - CHANGES-ONLY",
   "add_title": "Titel hinzufügen",
+  "contributed_by": "Von: {0}",
   "not_tagged": "Diese Erinnerung enthält keine Markierungen.",
   "restricted": "Nicht freigegeben"
 }
