--- a/locales/birch-artifact-grid-item_en.json
+++ b/locales/birch-artifact-grid-item_en.json
@@ -2,5 +2,8 @@
   "not_tagged":"This memory is not tagged.",
   "add_title":"Add Title",
   "restricted": "Restricted",
-  "contributed_by": "By: {0}"
+  "contributed_by": "By: {0}",
+  "processing": "Processing",
+  "processing_fail": "Processing Failed. Delete and re-upload or contact support",
+  "screening": "Screening"
 }
