--- a/locales/birch-artifact-grid-item-preview_eo.json
+++ b/locales/birch-artifact-grid-item-preview_eo.json
@@ -3,5 +3,6 @@
   "failure": "[Ûþļöåð Ƒåîļéð------ П國カ내]",
   "restricted": "[Ŕéšţŕîçţéð------------- П國カ내]",
   "size": "[Ƒîļé Öṽéŕ 15ṀƁ------- П國カ내]",
-  "unsupported": "[Ûñšûþþöŕţéð Ƒîļé Ţýþé--------- П國カ내]"
+  "unsupported": "[Ûñšûþþöŕţéð Ƒîļé Ţýþé--------- П國カ내]",
+  "uploading": "[Ûþļöåðîñĝ----------- П國カ내]"
 }
