Lingoport Automated Import

--- a/locales/birch-artifact-grid-item-preview_ru.json
+++ b/locales/birch-artifact-grid-item-preview_ru.json
@@ -1,8 +1,10 @@
 {
+  "_LRM_PKTAG890": "birch-artifact-grid-item_2_155 - CHANGES-ONLY",
   "duplicate": "Этот файл уже загружен.",
   "failure": "Загрузка не выполнена.",
   "restricted": "Просмотр ограничен",
   "retry": "Повторить попытку.",
   "size": "Размер файла превышает 15 МВ.",
-  "unsupported": "Неподдерживаемый формат файла "
+  "unsupported": "Неподдерживаемый формат файла ",
+  "uploading": "Загрузка"
 }
