--- a/locales/birch-artifact-grid-item_ru.json
+++ b/locales/birch-artifact-grid-item_ru.json
@@ -1,7 +1,10 @@
 {
-  "_LRM_PKTAG135": "birch-artifact-grid-item_1_155 - CHANGES-ONLY",
+  "_LRM_PKTAG890": "birch-artifact-grid-item_2_155 - CHANGES-ONLY",
   "add_title": "Добавить заголовок",
   "contributed_by": "Предоставлено: {0}",
   "not_tagged": "Для этого воспоминания нет меток.",
-  "restricted": "Просмотр ограничен"
+  "processing": "Обработка",
+  "processing_fail": "Обработка не удалась. Удалите и загрузите еще раз или свяжитесь со службой поддержки",
+  "restricted": "Просмотр ограничен",
+  "screening": "Проверка"
 }
