Lingoport Automated Import

--- a/locales/birch-artifact-grid-item-preview_fr.json
+++ b/locales/birch-artifact-grid-item-preview_fr.json
@@ -1,8 +1,10 @@
 {
+  "_LRM_PKTAG297": "birch-artifact-grid-item_2_150 - CHANGES-ONLY",
   "duplicate": "Ce fichier a déjà été téléversé.",
   "failure": "Echec du téléversement.",
   "restricted": "Accès restreint",
   "retry": "Ressayer.",
   "size": "La taille du fichier dépasse 15 Mo.",
-  "unsupported": "Type de fichier non compatible"
+  "unsupported": "Type de fichier non compatible",
+  "uploading": "Téléversement en cours"
 }
