Refactor state checks, add uploading state

--- a/locales/birch-artifact-grid-item_es.json
+++ b/locales/birch-artifact-grid-item_es.json
@@ -6,5 +6,6 @@
   "processing": "Procesando",
   "processing_fail": "No se pudo procesar. Eliminar y volver a cargar o contactar a Soporte",
   "restricted": "Restringido",
-  "screening": "Verificando"
+  "screening": "Verificando",
+  "uploading": "Cargando"
 }
