--- a/locales/birch-artifact-grid-item_ru.json
+++ b/locales/birch-artifact-grid-item_ru.json
@@ -6,5 +6,6 @@
   "processing": "Обработка",
   "processing_fail": "Обработка не удалась. Удалите и загрузите еще раз или свяжитесь со службой поддержки",
   "restricted": "Просмотр ограничен",
-  "screening": "Проверка"
+  "screening": "Проверка",
+  "uploading": "Загрузка"
 }
