Lingoport Automated Import

--- a/locales/birch-artifact-grid-item_de.json
+++ b/locales/birch-artifact-grid-item_de.json
@@ -1,10 +1,10 @@
 {
-  "_LRM_PKTAG889": "birch-artifact-grid-item_3_157 - CHANGES-ONLY",
+  "_LRM_PKTAG70": "birch-artifact-grid-item_3_157 - CHANGES-ONLY",
   "add_title": "Titel hinzufügen",
   "contributed_by": "Von: {0}",
   "not_tagged": "Diese Erinnerung enthält keine Markierungen.",
   "processing": "Wird verarbeitet",
-  "processing_fail": "Verarbeitung fehlgeschlagen. Versuchen Sie es bitte später noch einmal oder setzen Sie sich mit dem Support in Verbindung.",
+  "processing_fail": "Verarbeitung fehlgeschlagen. Bitte löschen und erneut hochladen oder den Support kontaktieren.",
   "restricted": "Nicht freigegeben",
   "screening": "Überprüfung läuft",
   "uploading": "Wird hochgeladen"
