--- a/locales/birch-artifact-grid-item-preview_en.json
+++ b/locales/birch-artifact-grid-item-preview_en.json
@@ -4,5 +4,7 @@
   "duplicate":"File Previously Uploaded",
   "size":"File Over 15MB",
   "unsupported":"Unsupported File Type",
-  "uploading": "Uploading"
+  "uploading": "Uploading",
+  "try_again": "Upload Failed. Please try again.",
+  "fail_continues": "Upload failed. If it continues to fail, try using a different file format."
 }
