--- a/locales/birch-artifact-grid-item-preview_zh.json
+++ b/locales/birch-artifact-grid-item-preview_zh.json
@@ -1,10 +1,12 @@
 {
-  "_LRM_PKTAG626": "birch-artifact-grid-item_2_156 - CHANGES-ONLY",
+  "_LRM_PKTAG499": "birch-artifact-grid-item_4_156 - CHANGES-ONLY",
   "duplicate": "此檔案先前已上傳過了。",
+  "fail_continues": "上傳失敗。如果持續失敗，請嘗試使用不同的檔案格式。",
   "failure": "上傳失敗。",
   "restricted": "受限",
   "retry": "重試。",
   "size": "檔案大小超過15MB。",
+  "try_again": "上傳失敗。請再試一次。",
   "unsupported": "不支援的檔案類型",
   "uploading": "上傳中"
 }
