--- a/locales/birch-artifact-grid-item-preview_ru.json
+++ b/locales/birch-artifact-grid-item-preview_ru.json
@@ -1,10 +1,12 @@
 {
-  "_LRM_PKTAG890": "birch-artifact-grid-item_2_155 - CHANGES-ONLY",
+  "_LRM_PKTAG382": "birch-artifact-grid-item_4_155 - CHANGES-ONLY",
   "duplicate": "Этот файл уже загружен.",
+  "fail_continues": "Загрузка не выполнена. Если ошибка повторяется, попробуйте использовать другой формат файла.",
   "failure": "Загрузка не выполнена.",
   "restricted": "Просмотр ограничен",
   "retry": "Повторить попытку.",
   "size": "Размер файла превышает 15 МВ.",
+  "try_again": "Загрузка не удалась Попробуйте еще раз.",
   "unsupported": "Неподдерживаемый формат файла ",
   "uploading": "Загрузка"
 }
