Lingoport Automated Import

--- a/locales/birch-artifact-grid-item-preview_ko.json
+++ b/locales/birch-artifact-grid-item-preview_ko.json
@@ -1,10 +1,12 @@
 {
-  "_LRM_PKTAG855": "birch-artifact-grid-item_2_153 - CHANGES-ONLY",
+  "_LRM_PKTAG97": "birch-artifact-grid-item_4_153 - CHANGES-ONLY",
   "duplicate": "이 파일은 이전에 업로드되었습니다.",
+  "fail_continues": "업로드 실패 계속 실패한다면, 다른 파일 형식을 사용해 보십시오.",
   "failure": "업로드 실패",
   "restricted": "제한됨",
   "retry": "재시도",
   "size": "파일 크기가 15MB를 초과합니다.",
+  "try_again": "업로드 실패 다시 시도해 보십시오.",
   "unsupported": "지원되지 않는 파일 유형",
   "uploading": "업로드 중"
 }
