--- a/locales/birch-artifact-grid-item_ru.json
+++ b/locales/birch-artifact-grid-item_ru.json
@@ -1,11 +1,13 @@
 {
-  "_LRM_PKTAG700": "birch-artifact-grid-item_3_155 - CHANGES-ONLY",
+  "_LRM_PKTAG232": "birch-artifact-grid-item_5_155 - CHANGES-ONLY",
   "add_title": "Добавить заголовок",
+  "check_email": "Посмотрите инструкции в сообщении электронной почты, отправленному по адресу, связанному с вашей учетной записью FamilySearch.",
   "contributed_by": "Предоставлено: {0}",
   "not_tagged": "Для этого воспоминания нет меток.",
   "processing": "Обработка",
   "processing_fail": "Обработка не удалась. Удалите и загрузите еще раз или свяжитесь со службой поддержки",
   "restricted": "Просмотр ограничен",
+  "restricted_info": "Содержание этого воспоминания не соответствует требованиям сайта (см. <a href=\"https://familysearch.org/photos/uploadguidelines\">Правила по загрузке</a>), и оно будет удалено в течение 30 дней.",
   "screening": "Проверка",
   "uploading": "Загрузка"
 }
