--- a/locales/birch-artifact-grid-item_de.json
+++ b/locales/birch-artifact-grid-item_de.json
@@ -1,11 +1,13 @@
 {
-  "_LRM_PKTAG70": "birch-artifact-grid-item_3_157 - CHANGES-ONLY",
+  "_LRM_PKTAG398": "birch-artifact-grid-item_5_157 - CHANGES-ONLY",
   "add_title": "Titel hinzufügen",
+  "check_email": "In dem E-Mail-Fach, das mit Ihrem FamilySearch-Benutzerkonto verknüpft ist, finden Sie Anweisungen.",
   "contributed_by": "Von: {0}",
   "not_tagged": "Diese Erinnerung enthält keine Markierungen.",
   "processing": "Wird verarbeitet",
   "processing_fail": "Verarbeitung fehlgeschlagen. Bitte löschen und erneut hochladen oder den Support kontaktieren.",
   "restricted": "Nicht freigegeben",
+  "restricted_info": "Der Zugriff auf diese Erinnerung ist aufgrund ihres Inhalts beschränkt (siehe <a href=\"https://familysearch.org/photos/uploadguidelines\">Richtlinien für das Hochladen</a>) und wird innerhalb von 30 Tagen von der Website entfernt.",
   "screening": "Überprüfung läuft",
   "uploading": "Wird hochgeladen"
 }
