Lingoport Automated Import

--- a/locales/birch-artifact-grid-item_it.json
+++ b/locales/birch-artifact-grid-item_it.json
@@ -1,11 +1,13 @@
 {
-  "_LRM_PKTAG941": "birch-artifact-grid-item_3_151 - CHANGES-ONLY",
+  "_LRM_PKTAG123": "birch-artifact-grid-item_5_151 - CHANGES-ONLY",
   "add_title": "Aggiungi titolo",
+  "check_email": "Controlla l’e-mail collegata al tuo account FamilySearch per trovare istruzioni in merito.",
   "contributed_by": "Da: {0}",
   "not_tagged": "Questo ricordo non è taggato.",
   "processing": "In elaborazione",
   "processing_fail": "Elaborazione non riuscita. Cancella e ricarica oppure contatta l’assistenza.",
   "restricted": "Accesso limitato",
+  "restricted_info": "Questo ricordo è stato sottoposto a restrizioni a causa del contenuto (vedi <a href=\"https://familysearch.org/photos/uploadguidelines\">Linee guida per il caricamento</a>) e sarà rimosso dal sito entro 30 giorni.",
   "screening": "Controllo in corso",
   "uploading": "Caricamento in corso"
 }
