--- a/locales/birch-artifact-grid-item_fr.json
+++ b/locales/birch-artifact-grid-item_fr.json
@@ -1,11 +1,13 @@
 {
-  "_LRM_PKTAG324": "birch-artifact-grid-item_3_150 - CHANGES-ONLY",
+  "_LRM_PKTAG538": "birch-artifact-grid-item_5_150 - CHANGES-ONLY",
   "add_title": "Ajouter le titre",
+  "check_email": "Vous trouverez des instructions dans un courriel envoyé à l’adresse indiquée dans votre compte FamilySearch.",
   "contributed_by": "Par : {0}",
   "not_tagged": "Ce souvenir n’a pas de signet.",
   "processing": "Traitement en cours",
   "processing_fail": "Échec du traitement. Supprimez et téléversez de nouveau le fichier, ou prenez contact avec l’assistance.",
   "restricted": "Accès restreint",
+  "restricted_info": "Du fait de son contenu, l’affichage de ce souvenir est interdit et sera supprimé du site dans les trente jours (voir les <a href=\"https://familysearch.org/photos/uploadguidelines\">directives de téléversement</a>).",
   "screening": "Vérification",
   "uploading": "Téléversement en cours"
 }
