--- a/locales/birch-artifact-grid-item_ru.json
+++ b/locales/birch-artifact-grid-item_ru.json
@@ -1,5 +1,5 @@
 {
-  "_LRM_PKTAG232": "birch-artifact-grid-item_5_155 - CHANGES-ONLY",
+  "_LRM_PKTAG144": "birch-artifact-grid-item_6_155 - CHANGES-ONLY",
   "add_title": "Добавить заголовок",
   "check_email": "Посмотрите инструкции в сообщении электронной почты, отправленному по адресу, связанному с вашей учетной записью FamilySearch.",
   "contributed_by": "Предоставлено: {0}",
@@ -7,7 +7,7 @@
   "processing": "Обработка",
   "processing_fail": "Обработка не удалась. Удалите и загрузите еще раз или свяжитесь со службой поддержки",
   "restricted": "Просмотр ограничен",
-  "restricted_info": "Содержание этого воспоминания не соответствует требованиям сайта (см. <a target='blank' href=\"https://familysearch.org/photos/uploadguidelines\">Правила по загрузке</a>), и оно будет удалено в течение 30 дней.",
+  "restricted_info": "Содержание этого воспоминания не соответствует требованиям сайта (см. <a target='blank' href=\"https://familysearch.org/photos/uploadguidelines\">Правила по загрузке</a>), и оно будет удалено с сайта в течение 30 дней.",
   "screening": "Проверка",
   "uploading": "Загрузка"
 }
