--- a/locales/birch-artifact-grid-item_es.json
+++ b/locales/birch-artifact-grid-item_es.json
@@ -1,5 +1,5 @@
 {
-  "_LRM_PKTAG26": "birch-artifact-grid-item_5_149 - CHANGES-ONLY",
+  "_LRM_PKTAG760": "birch-artifact-grid-item_6_149 - CHANGES-ONLY",
   "add_title": "Agregar título",
   "check_email": "Revisa tu correo electrónico vinculado a tu cuenta FamilySearch para obtener instrucciones.",
   "contributed_by": "Por: {0}",
@@ -7,7 +7,7 @@
   "processing": "Procesando",
   "processing_fail": "No se pudo procesar. Eliminar y volver a cargar o contacta a Soporte.",
   "restricted": "Restringido",
-  "restricted_info": "Este Recuerdo ha sido restringido debido al contenido (ver <a target='blank' href=\"https://familysearch.org/photos/uploadguidelines\">Pautas de carga</a>) y se quitará del sitio dentro de 30 días.",
+  "restricted_info": "Este Recuerdo ha sido restringido debido al contenido (ver <a target='blank' href=\"https://familysearch.org/photos/uploadguidelines\">Pautas de carga y Normas</a>) y se quitará del sitio dentro de 30 días.",
   "screening": "Verificando",
   "uploading": "Cargando"
 }
