--- a/locales/birch-artifact-grid-item_it.json
+++ b/locales/birch-artifact-grid-item_it.json
@@ -1,5 +1,5 @@
 {
-  "_LRM_PKTAG266": "birch-artifact-grid-item_6_151 - CHANGES-ONLY",
+  "_LRM_PKTAG822": "birch-artifact-grid-item_6_151 - CHANGES-ONLY",
   "add_title": "Aggiungi titolo",
   "check_email": "Controlla l’e-mail collegata al tuo account FamilySearch per trovare istruzioni in merito.",
   "contributed_by": "Da: {0}",
@@ -7,7 +7,7 @@
   "processing": "In elaborazione",
   "processing_fail": "Elaborazione non riuscita. Cancella e ricarica oppure contatta l’assistenza.",
   "restricted": "Accesso limitato",
-  "restricted_info": "Questo ricordo è stato sottoposto a restrizioni a causa del contenuto (vedi <a target='blank' href=\"https://familysearch.org/photos/uploadguidelines\">Linee guida per il caricamento</a>) e sarà rimosso dal sito entro 30 giorni.",
+  "restricted_info": "Questo ricordo è stato sottoposto a restrizioni a causa del contenuto (vedi <a target='blank' href=\"https://familysearch.org/photos/uploadguidelines\">Linee guida e direttive per il caricamento</a>) e sarà rimosso dal sito entro 30 giorni.",
   "screening": "Controllo in corso",
   "uploading": "Caricamento in corso"
 }
