--- a/locales/birch-artifact-grid-item_fr.json
+++ b/locales/birch-artifact-grid-item_fr.json
@@ -1,8 +1,9 @@
 {
-  "_LRM_PKTAG413": "birch-artifact-grid-item_6_150 - CHANGES-ONLY",
+  "_LRM_PKTAG493": "birch-artifact-grid-item_7_150 - CHANGES-ONLY",
   "add_title": "Ajouter le titre",
   "check_email": "Vous trouverez des instructions dans un courriel envoyé à l’adresse indiquée dans votre compte FamilySearch.",
   "contributed_by": "Par : {0}",
+  "contributed_by_link": "Par : <span class='contributor-name' on-tap='_openContactCard'>{0}</span>",
   "not_tagged": "Ce souvenir n’a pas de signet.",
   "processing": "Traitement en cours",
   "processing_fail": "Échec du traitement. Supprimez et téléversez de nouveau le fichier, ou prenez contact avec l’assistance.",
