--- a/locales/birch-artifact-grid-item_pt.json
+++ b/locales/birch-artifact-grid-item_pt.json
@@ -1,9 +1,9 @@
 {
-  "_LRM_PKTAG35": "birch-artifact-grid-item_7_154 - CHANGES-ONLY",
+  "_LRM_PKTAG27": "birch-artifact-grid-item_8_154 - CHANGES-ONLY",
   "add_title": "Acrescentar um Título",
   "check_email": "Verifique o e-mail cadastrado em  sua conta do FamilySearch para obter mais instruções.",
   "contributed_by": "Por: {0}",
-  "contributed_by_link": "Por: <span class='contributor-name' on-tap='_openContactCard'>{0}</span>",
+  "contributed_by_link": "Por: <span class='style-scope birch-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
   "not_tagged": "Esta recordação não está marcada.",
   "processing": "Processando",
   "processing_fail": "Falha no Processamento Remova e reenvie o artefato ou entre em contato com o suporte.",
