--- a/locales/birch-artifact-grid-item_ru.json
+++ b/locales/birch-artifact-grid-item_ru.json
@@ -1,5 +1,5 @@
 {
-  "_LRM_PKTAG651": "birch-artifact-grid-item_8_155 - CHANGES-ONLY",
+  "_LRM_PKTAG306": "birch-artifact-grid-item_9_155 - CHANGES-ONLY",
   "add_title": "Добавить заголовок",
   "check_email": "Посмотрите инструкции в сообщении электронной почты, отправленному по адресу, связанному с вашей учетной записью FamilySearch.",
   "contributed_by": "Предоставлено: {0}",
@@ -10,5 +10,6 @@
   "restricted": "Просмотр ограничен",
   "restricted_info": "Содержание этого воспоминания не соответствует требованиям сайта (см. <a target='blank' href=\"https://familysearch.org/photos/uploadguidelines\">Правила по загрузке</a>), и оно будет удалено с сайта в течение 30 дней.",
   "screening": "Проверка",
+  "upload_failed": "Загрузка не выполнена. Удалить и загрузить снова.",
   "uploading": "Загрузка"
 }
