--- a/locales/birch-artifact-grid-item_ko.json
+++ b/locales/birch-artifact-grid-item_ko.json
@@ -1,5 +1,5 @@
 {
-  "_LRM_PKTAG780": "birch-artifact-grid-item_8_153 - CHANGES-ONLY",
+  "_LRM_PKTAG871": "birch-artifact-grid-item_9_153 - CHANGES-ONLY",
   "add_title": "제목 추가",
   "check_email": "유의 사항을 보려면 귀하의 FamilySearch 계정에 연결된 이메일을 확인하십시오.",
   "contributed_by": "작성자: {0}",
@@ -10,5 +10,6 @@
   "restricted": "제한됨",
   "restricted_info": "이 추억은 내용(<a target='blank' href=\"https://familysearch.org/photos/uploadguidelines\">업로드 지침 및 정책</a> 참조) 때문에 제한되었으며 30일 이내에 사이트에서 삭제될 예정입니다.",
   "screening": "심사 중",
+  "upload_failed": "업로드 실패 삭제하시고 다시 업로드해 주십시오.",
   "uploading": "업로드 중"
 }
