Lingoport Automated Import

--- a/locales/birch-artifact-grid-item_zh.json
+++ b/locales/birch-artifact-grid-item_zh.json
@@ -1,5 +1,5 @@
 {
-  "_LRM_PKTAG756": "birch-artifact-grid-item_8_156 - CHANGES-ONLY",
+  "_LRM_PKTAG95": "birch-artifact-grid-item_9_156 - CHANGES-ONLY",
   "add_title": "加入標題",
   "check_email": "檢查和你 FamilySearch 帳號相連的電子郵件，來查看指示。",
   "contributed_by": "建立者：{0}",
@@ -8,7 +8,8 @@
   "processing": "處理中",
   "processing_fail": "處理失敗。刪除且重新上傳或聯絡支援。",
   "restricted": "受限",
-  "restricted_info": "此回憶由於內容的關係已受到限制（見<a target='blank' href=\"https://familysearch.org/photos/uploadguidelines\">上傳準則和政策</a>），將於30天內從網站中移除。",
+  "restricted_info": "此回憶由於內容的關係已受到限制（見<a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">上傳準則和政策</a>），將於30天內從網站中移除。",
   "screening": "檢測中",
+  "upload_failed": "上傳失敗。刪除，並再次上傳。",
   "uploading": "上傳中"
 }
