--- a/locales/birch-artifact-grid-item_fr.json
+++ b/locales/birch-artifact-grid-item_fr.json
@@ -1,5 +1,5 @@
 {
-  "_LRM_PKTAG258": "birch-artifact-grid-item_8_150 - CHANGES-ONLY",
+  "_LRM_PKTAG907": "birch-artifact-grid-item_9_150 - CHANGES-ONLY",
   "add_title": "Ajouter le titre",
   "check_email": "Vous trouverez des instructions dans un courriel envoyé à l’adresse indiquée dans votre compte FamilySearch.",
   "contributed_by": "Par : {0}",
@@ -10,5 +10,6 @@
   "restricted": "Accès restreint",
   "restricted_info": "Du fait de son contenu, l’affichage de ce souvenir est interdit et sera supprimé du site dans les trente jours (voir les <a target='blank' href=\"https://familysearch.org/photos/uploadguidelines\">règles et directives de téléversement</a>).",
   "screening": "Vérification",
+  "upload_failed": "Échec du téléversement. Supprimez, et téléversez à nouveau.",
   "uploading": "Téléversement en cours"
 }
