--- a/locales/birch-artifact-grid-item_ja.json
+++ b/locales/birch-artifact-grid-item_ja.json
@@ -1,5 +1,5 @@
 {
-  "_LRM_PKTAG295": "birch-artifact-grid-item_10_152 - CHANGES-ONLY",
+  "_LRM_PKTAG840": "birch-artifact-grid-item_11_152 - CHANGES-ONLY",
   "add_title": "タイトルを追加する",
   "check_email": "指示を読むには，ファミリーサーチアカウントにリンクされている電子メールをチェックしてください。",
   "contributed_by": "提供者：{0}",
@@ -7,6 +7,7 @@
   "not_tagged": "この思い出はタグ付けされていません。",
   "processing": "処理中",
   "processing_fail": "処理できませんでした。削除して再度アップロードするか，サポートに連絡してください。",
+  "remaining_days_count": "あと{0}日",
   "restricted": "制限付き",
   "restricted_info": "この思い出はコンテンツのために制限されました（<a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">アップロードの指針と方針</a>を参照）。30日以内にサイトから削除されます。",
   "screening": "検査中",
