--- a/locales/fs-artifact-grid-item_it.json
+++ b/locales/fs-artifact-grid-item_it.json
@@ -1,9 +1,8 @@
 {
-  "_LRM_PKTAG248": "birch-artifact-grid-item_11_151 - CHANGES-ONLY",
   "add_title": "Aggiungi titolo",
   "check_email": "Controlla l’e-mail collegata al tuo account FamilySearch per trovare istruzioni in merito.",
   "contributed_by": "Da: {0}",
-  "contributed_by_link": "Inserito da: <span class='style-scope birch-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
+  "contributed_by_link": "Inserito da: <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
   "not_tagged": "Questo ricordo non è taggato.",
   "processing": "In elaborazione",
   "processing_fail": "Elaborazione non riuscita. Cancella e ricarica oppure contatta l’assistenza.",
