--- a/locales/fs-artifact-grid-item_ja.json
+++ b/locales/fs-artifact-grid-item_ja.json
@@ -1,9 +1,8 @@
 {
-  "_LRM_PKTAG840": "birch-artifact-grid-item_11_152 - CHANGES-ONLY",
   "add_title": "タイトルを追加する",
   "check_email": "指示を読むには，ファミリーサーチアカウントにリンクされている電子メールをチェックしてください。",
   "contributed_by": "提供者：{0}",
-  "contributed_by_link": "提供者：<span class='style-scope birch-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
+  "contributed_by_link": "提供者：<span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
   "not_tagged": "この思い出はタグ付けされていません。",
   "processing": "処理中",
   "processing_fail": "処理できませんでした。削除して再度アップロードするか，サポートに連絡してください。",
