Lingoport Pseudo-Localization: eo

--- a/locales/fs-artifact-grid-item_eo.json
+++ b/locales/fs-artifact-grid-item_eo.json
@@ -1,5 +1,6 @@
 {
   "add_title": "[Åðð Ţîţļé----------- П國カ내]",
+  "associated_audio": "[Åššöçîåţéð Åûðîö--------- П國カ내]",
   "check_email": "[Çĥéçķ ýöûŕ éɱåîļ ļîñķéð ţö ýöûŕ ƑåɱîļýŠéåŕçĥ åççöûñţ ƒöŕ îñšţŕûçţîöñš.--------------------- П國カ내]",
   "contributed_by": "[Ɓý: {0}------- П國カ내]",
   "contributed_by_link": "[Ɓý: <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}]</span>",
