--- a/locales/fs-artifact-grid-item_es.json
+++ b/locales/fs-artifact-grid-item_es.json
@@ -1,5 +1,7 @@
 {
+  "_LRM_PKTAG328": "fs-artifact-grid-item_1_101 - CHANGES-ONLY",
   "add_title": "Agregar título",
+  "associated_audio": "Audio asociado",
   "check_email": "Revisa tu correo electrónico vinculado a tu cuenta FamilySearch para obtener instrucciones.",
   "contributed_by": "Por: {0}",
   "contributed_by_link": "Por: <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
