Lingoport Pseudo-Localization: eo

--- a/locales/fs-artifact-grid-item_eo.json
+++ b/locales/fs-artifact-grid-item_eo.json
@@ -5,6 +5,7 @@
   "contributed_by": "[Ɓý: {0}------- П國カ내]",
   "contributed_by_link": "[Ɓý: <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}]</span>",
   "not_tagged": "[Ţĥîš ɱéɱöŕý îš ñöţ ţåĝĝéð.------------- П國カ내]",
+  "private_memory_tooltip": "[Ţĥîš ɱéɱöŕý îš þŕîṽåţé. Öñļý ýöû çåñ šéé îţ.------------------- П國カ내]",
   "processing": "[Þŕöçéššîñĝ------------- П國カ내]",
   "processing_fail": "[Þŕöçéššîñĝ Ƒåîļéð. Ðéļéţé åñð ŕé-ûþļöåð öŕ çöñţåçţ šûþþöŕţ.---------------- П國カ내]",
   "remaining_days_count": "[{0} ðåýš--------- П國カ내]",
