--- a/locales/fs-artifact-grid-item_pl.json
+++ b/locales/fs-artifact-grid-item_pl.json
@@ -1,16 +1,17 @@
 {
+  "not_tagged": "To wspomnienie nie ma etykiety.",
   "add_title": "Dodaj tytuł",
-  "associated_audio": "Powiązane nagranie",
-  "check_email": "Sprawdź swoją pocztę e-mail połączoną z twoim kontem FamilySearch, aby uzyskać wytyczne.",
+  "restricted": "Nałożone ograniczenia",
   "contributed_by": "Przez: {0}",
   "contributed_by_link": "Przez: <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
-  "not_tagged": "To wspomnienie nie ma etykiety.",
   "processing": "Przetwarzanie",
   "processing_fail": "Przetwarzanie nieudane. Usuń i ponownie prześlij lub skontaktuj się z działem wsparcia.",
-  "remaining_days_count": "{0} dni",
-  "restricted": "Nałożone ograniczenia",
-  "restricted_info": "Na to wspomnienie zostały nałożone ograniczenia ze względu na jego treść (zob. <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Prześlij wskazówki i zasady</a>) i zostanie ono usunięte z tej strony w ciągu 30 dni.",
   "screening": "Sprawdzanie",
+  "uploading": "Przesyłanie",
+  "restricted_info": "Na to wspomnienie zostały nałożone ograniczenia ze względu na jego treść (zob. <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Prześlij wskazówki i zasady</a>) i zostanie ono usunięte z tej strony w ciągu 30 dni.",
+  "check_email": "Sprawdź swoją pocztę e-mail połączoną z twoim kontem FamilySearch, aby uzyskać wytyczne.",
   "upload_failed": "Przesyłanie nieudane. Usuń i ponownie prześlij.",
-  "uploading": "Przesyłanie"
+  "remaining_days_count": "{0} dni",
+  "associated_audio": "Powiązane nagranie",
+  "private_memory_tooltip": "To wspomnienie jest prywatne. Tylko ty możesz je zobaczyć."
 }
